--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<p>Mobile: 0060164372389（Malaysia）</p>
 				<p>E-mail：<a href="mailto:easer.liu01@gmail.com">easer.liu01@gmail.com</a></p>
 				<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
+				<p>sub01：<a href="./Easer's Resume_MC.html">https://001</a></p>
 			</div>
 			<dl class="details">
 				<dt><h5>Career Objective</h5></dt>
