--- a/Easer's Resume_MC.html
+++ b/Easer's Resume_MC.html
@@ -12,7 +12,12 @@
 			<!-- <div style="height:32px;padding-left:20px;color:#fd7222;font-size:14px;"></div> -->
 			<div class="summary">
 			<img width="100" height="130" align="right" class="headerImg" alt="刘玉泽" src="./htmlSource/EaserIcon01.jpg">
-			<h1>刘玉泽</h1>
+			<h1>
+				<select id="select" onchange="window.location=this.value;">  
+				<option value="./Easer's Resume_ME.html">Liu.Easer </option>  
+				<option value="./Easer's Resume_MC.html" selected="selected">刘玉泽</option>  
+				</select>
+				</h1>
 			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<span class="ver-line">|</span>户口：吉林-四平，中国
 			<br>现居住于:马来西亚 吉隆坡
 			<br>4年工作经验
