--- a/Easer's Resume_ME.html
+++ b/Easer's Resume_ME.html
@@ -12,7 +12,12 @@
 			<!-- <div style="height:32px;padding-left:20px;color:#fd7222;font-size:14px;"></div> -->
 			<div class="summary">
 			<img width="100" height="130" align="right" class="headerImg" alt="刘玉泽" src="./htmlSource/EaserIcon01.jpg">
-				<h1>Liu.Easer</h1>
+				<h1>
+				<select id="select" onchange="window.location=this.value;">  
+				<option value="./Easer's Resume_ME.html" selected="selected">Liu.Easer </option>  
+				<option value="./Easer's Resume_MC.html">刘玉泽</option>  
+				</select>
+				</h1>
 				Male<span class="ver-line">|</span>Single<span class="ver-line">|</span>
 				Born in 1989/12<span class="ver-line">|</span>HUKOU：JILIN-SIPING, CHINA
 				<br>Location：Kuala Lumpur, Malaysia
