--- a/Easer's Resume_CE.html
+++ b/Easer's Resume_CE.html
@@ -20,9 +20,9 @@
 				</h1>
 				Male<span class="ver-line">|</span>Single<span class="ver-line">|</span>
 				Born in 1989/12<span class="ver-line">|</span>HUKOU：JILIN-SIPING, CHINA
-				<br>Location：Kuala Lumpur, Malaysia
-				<br>4 Years' Experience
-				<p>Mobile: 0060164372389（Malaysia）</p>
+				<br>Location：BeiJing, China
+				<br>5 Years' Experience
+				<p>Mobile: +8615044158006</p>
 				<p>E-mail：<a href="mailto:liu.easer@qq.com">liu.easer@qq.com</a></p>
 				<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
 			</div>
@@ -33,9 +33,9 @@
 					<li><strong>Desired Type of Employment:</strong><br>Full-time</li>
 					<li><strong>Desired Position:</strong><br>IOS Development Engineer、Game Developer</li>
 					<li><strong>Desired Industry:</strong><br>Computer Software、Online Game、Internet/E-Commerce</li>
-					<li><strong>Desired Location:</strong><br>Kuala Lumpur. Malaysia</li>
+					<li><strong>Desired Location:</strong><br>BeiJing. China</li>
 					<li><strong>Expected Salary(before tax):</strong><br>8000-10000 CNY/Month</li>
-					<li><strong>Current Situation:</strong><br>Now study English in KL, Malaysia, can start to work after Octorber</li>
+					<li><strong>Current Situation:</strong><br>Now looking for a IOS Developer Position, can work since December</li>
 					</ul>
 				</dd>
 				<dt><h5>Self-assessment</h5></dt>
@@ -49,8 +49,8 @@
 				<dt><h5>Work Experience</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2016/10 -- Present</p>
-						<h6>Study English in Kuala Lumpur, will finish at the end of Octorber</h6>
+						<p>2016/10 -- 2017/10</p>
+						<h6>Study English in Kuala Lumpur, and finish in Octorber</h6>
 					</div>
 					<div class="work-experience">
 						<p>2015/09 -- 2016/10</p>
