--- a/Easer's Resume_CC.html
+++ b/Easer's Resume_CC.html
@@ -19,9 +19,9 @@
 				</select>
 				</h1>
 			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<span class="ver-line">|</span>户口：吉林-四平，中国
-			<br>现居住于:马来西亚 吉隆坡
-			<br>4年工作经验
-			<p>手机：00601643772389（马来西亚）</p>
+			<br>现居住于：中国，北京
+			<br>5年工作经验
+			<p>手机：+8615044158006</p>
 			<p>E-mail：<a href="mailto:liu.easer@qq.com">liu.easer@qq.com</a></p>
 			<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
 			</div>
@@ -32,8 +32,9 @@
 						<li><strong>工作性质：</strong>全职</li>
 						<li><strong>期望职业：</strong>IOS开发工程师、游戏开发</li>
 						<li><strong>期望行业：</strong>计算机软件、网络游戏、互联网/电子商务</li>
+						<li><strong>期望地区：</strong>中国，北京</li>
 						<li><strong>期望月薪：</strong>8000-10000 元/月</li>
-						<li><strong>目前状况：</strong>我目前于马来西亚|吉隆坡学习英语，十月份学习结束后即可上岗</li>
+						<li><strong>目前状况：</strong>目前处于离职状态，可于12月份上岗</li>
 					</ul>
 				</dd>
 				<dt><h5>自我评价</h5></dt>
@@ -46,7 +47,7 @@
 				<dt><h5>工作经历</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2016/10 -- 至今</p>
+						<p>2016/10 -- 2017/10</p>
 						<h6>于吉隆坡学习英语体验生活</h6>
 					</div>
 					<div class="work-experience">
