--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Easer's Resume_ME</title>
+		<title>Easer's Resume_CC</title>
 		<meta name="robots" content="nofollow">
 		<link rel="stylesheet" type="text/css" href="./htmlSource/reset.min.css" media="all">
 		<link rel="stylesheet" type="text/css" href="./htmlSource/resume_preview.css" media="all">
@@ -12,132 +12,124 @@
 			<!-- <div style="height:32px;padding-left:20px;color:#fd7222;font-size:14px;"></div> -->
 			<div class="summary">
 			<img width="100" height="130" align="right" class="headerImg" alt="刘玉泽" src="./htmlSource/EaserIcon01.jpg">
-				<h1>
+			<h1>
 				<select id="select" onchange="window.location=this.value;">  
-				<option value="./Easer's Resume_ME.html" selected="selected">Liu.Easer </option>  
-				<option value="./Easer's Resume_MC.html">刘玉泽</option>  
+				<option value="./Easer's Resume_CE.html">Liu.Easer </option>  
+				<option value="./Easer's Resume_CC.html" selected="selected">刘玉泽</option>  
 				</select>
 				</h1>
-				Male<span class="ver-line">|</span>Single<span class="ver-line">|</span>
-				Born in 1989/12<span class="ver-line">|</span>HUKOU：JILIN-SIPING, CHINA
-				<br>Location：Kuala Lumpur, Malaysia
-				<br>4 Years' Experience
-				<p>Mobile: 0060164372389（Malaysia）</p>
-				<p>E-mail：<a href="mailto:easer.liu01@gmail.com">easer.liu01@gmail.com</a></p>
-				<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
+			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<span class="ver-line">|</span>户口：吉林-四平，中国
+			<br>现居住于：中国，北京
+			<br>5年工作经验
+			<p>手机：+8615044158006</p>
+			<p>E-mail：<a href="mailto:liu.easer@qq.com">liu.easer@qq.com</a></p>
+			<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
 			</div>
 			<dl class="details">
-				<dt><h5>Career Objective</h5></dt>
+				<dt><h5>求职意向</h5></dt>
 				<dd>
 					<ul>
-					<li><strong>Desired Type of Employment:</strong><br>Full-time</li>
-					<li><strong>Desired Position:</strong><br>IOS Development Engineer、Game Developer</li>
-					<li><strong>Desired Industry:</strong><br>Computer Software、Online Game、Internet/E-Commerce</li>
-					<li><strong>Desired Location:</strong><br>Kuala Lumpur. Malaysia</li>
-					<li><strong>Expected Salary(before tax):</strong><br>3000 MYR/Month</li>
-					<li><strong>Current Situation:</strong><br>Now study English in KL, Malaysia, can start to work after Octorber</li>
+						<li><strong>工作性质：</strong>全职</li>
+						<li><strong>期望职业：</strong>IOS开发工程师、游戏开发</li>
+						<li><strong>期望行业：</strong>计算机软件、网络游戏、互联网/电子商务</li>
+						<li><strong>期望地区：</strong>中国，北京</li>
+						<li><strong>期望月薪：</strong>8000-10000 元/月</li>
+						<li><strong>目前状况：</strong>目前处于离职状态，可于12月份上岗</li>
 					</ul>
 				</dd>
-				<dt><h5>Self-assessment</h5></dt>
+				<dt><h5>自我评价</h5></dt>
 				<dd>
 					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-						I can work steadfastly, scrupulously, attentively, have strong practical ability to analyze and deal with the problems, 
-						 strongly thirst for new knowledge, good at independent thinking, have good consciousness about teamwork. 
-						Now I am learnning English in Malaysia, hope to join the company and contribute.
+					能够实际地分析问题原因并进行处理，计划性的安排工作内容，善于独立思考，亦有良好的团队意识，
+					有旺盛的求知欲和积极的进取心，得益于此，之前工作中负责的团队所有任务和产品都超乎预期的完成，亦曾数次在较短期限内完成公司的紧急任务。
 					</p>
 				</dd>
-				<dt><h5>Work Experience</h5></dt>
+				<dt><h5>工作经历</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2016/10 -- Present</p>
-						<h6>Study English in Kuala Lumpur, will finish at the end of Octorber</h6>
+						<p>2016/10 -- 2017/10</p>
+						<h6>于吉隆坡学习英语体验生活</h6>
 					</div>
 					<div class="work-experience">
 						<p>2015/09 -- 2016/10</p>
-						<h6>AvePoint<span class="ver-line">|</span>IOS Developer</h6>
+						<h6>长春径点科技有限公司<span class="ver-line">|</span>IOS开发</h6>
 						<p>
-							<span>Computer Software</span>
-							<span><span class="ver-line">|</span>WFOE</span>
-							<span><span class="ver-line">|</span> Company Size：100-499</span>
+							<span>行业类别： 计算机软件</span>
+							<span><span class="ver-line">|</span>企业性质：外商独资</span>
+							<span><span class="ver-line">|</span>规模：100-499人</span>
 						</p>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							<strong>Job Description:</strong>
-							<br>Realize the Design and customers' demand, implement the drawing and layout of Scan Report with <strong>CoreGraphics and VFL</strong>, write and read <strong>JSON Data</strong> with <strong>Core Data</strong>, 
-							have fixed many BUGs through search for information in internet by myself, have successed to release <strong>2 versions of IOS Apps</strong> with the cooperation of colleagues.
+							<strong>工作描述：</strong>
+							<br>依据公司产品的Design和客户需求，用Object-C语言，以<strong>CoreGraphics</strong>、<strong>VFL</strong>等技术实现Scan Report界面绘制和布局，运用<strong>Core Data</strong>实现<strong>JSON</strong>数据操作功能，
+							通过<strong>自行查询资料</strong>解决了开发过程中多个问题，与同事协作成功完成了<strong>2个版本IOS App产品的Release</strong>，均得到客户的肯定。
 						</p>
 					</div>
 					<div class="work-experience">
 						<p>2013/11 -- 2015/09</p>
-						<h6>AvePoint<span class="ver-line">|</span>QA</h6>
+						<h6>长春径点科技有限公司<span class="ver-line">|</span>QA</h6>
 						<p>
-							<span>Computer Software</span>
-							<span><span class="ver-line">|</span>WFOE</span>
-							<span><span class="ver-line">|</span> Company Size：100-499</span>
+							<span>行业类别： 计算机软件</span>
+							<span><span class="ver-line">|</span>企业性质：外商独资</span>
+							<span><span class="ver-line">|</span>规模：100-499人</span>
 						</p>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							<strong>Job Description:</strong>
-							<br>Write testing cases about important function, lead <strong>a team of 5 persons</strong> to test different functions, submit JIRA BUGs，more than <strong>4 versions of Apps</strong> have successed to release.
-							<br>Be in charge for <strong>Load Test</strong> and <strong>Performance Test</strong> with VS Studio, come up with Report and suggestions to improve the performance of App, research new Testing Tool, such as Loadrunner and the Load balance function of VS Studio.
+							<strong>工作描述：</strong>
+							<br>编写重要功能的测试用例，组织约<strong>5人Team</strong>进行各期间测试，提交JIRA BUG，期间保证<strong>4个版本的产品正常Release</strong>。
+							<br>使用VS Studio担负公司产品的<strong>压力测试</strong>和<strong>性能测试</strong>，提交Report以及合理性建议，使产品性能得到改善，研究新测试工具的用法及功能，如Loadrunner，VS Studio的Load balance测试等 。
 						</p>
 					</div>
 				</dd>
-				<dt><h5>Project Experience</h5></dt>
+				<dt><h5>项目经验</h5></dt>
 				<dd>
 					<div class="project-experience">
 						<p>2013/11 -- 2016/10</p>
-						<h6>Develop the multiple versions of Apps</h6>
+						<h6>CG（公司自主产品）</h6>
 						<div>
 							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Responsibilities：</strong>
-								<br>Implement the function in the design document, develop App, solve the issues reported, make sure App can release in time.
+								<strong>责任描述：</strong>
+								<br>依据客户需求以及Desigen，实现App的Scan Report界面以及相关数据操作功能，依据优先级繁简度修复BUG，与同事协作如期将产品交付到客户手里。
 							</p>
 							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Project Description：</strong>
-								<br>It is a add-ons for PC client of CG, mainly use for displaying and operating the data scaned by CG, 
-								make customs feel more convenient to check or operate the report.
+								<strong>项目简介：</strong>
+								<br>属于CG产品PC客户端的附属产品，主要用于显示CG产品PC客户端上记录的结果以及相关数据操作的基本功能，
+								为客户提供便捷查看操作功能。
 							</p>
 						</div>
 					</div>
 				</dd>
-				<dt><h5>Education Background</h5></dt>
+				<dt><h5>教育经历</h5></dt>
 				<dd>
 					<div class="education-background">
 						<p>2008/08 -- 2012/07</p>
-						<h6>
-							Jilin University<span class="ver-line">|</span>
-							Telecommunications Engineering<span class="ver-line">|</span>
-							Bachelor<span class="ver-line">|</span>
-							Unified enrollment
-						</h6>
+						<h6>吉林大学<span class="ver-line">|</span>通信工程<span class="ver-line">|</span>本科</h6>
 					</div>
 				</dd>
-				<dt><h5>Certificates</h5></dt>
+				<dt><h5>证书</h5></dt>
 				<dd>
-					<h6>CET4<span class="ver-line">|</span>2010/06</h6>
-					<h6>Nationwide Computer Level Test Band 2<span class="ver-line">|</span>2011/03</h6>
+					<h6>大学英语四级<span class="ver-line">|</span>2010/06</h6>
+					<h6>全国计算机等级二级<span class="ver-line">|</span>2011/03</h6>
 					<h6>CESIEEB<span class="ver-line">|</span>2017/07</h6>
 				</dd>
-				<dt><h5>Language Skills</h5></dt>
+				<dt><h5>语言能力</h5></dt>
+				<dd><div class="language-skill">英语<span>：读写能力良好<span class="ver-line">|</span> 听说能力良好</span></div></dd>
+				<dt><h5>专业技能</h5></dt>
 				<dd>
-					<div class="language-skill">English<span>：reading&amp;writing average<span class="ver-line">|</span>listening&amp;speaking average</span></div>
+					<div class="professional-skill">OC<span class="ver-line">|</span>熟练<span class="ver-line">|</span>12个月</div>
+					<div class="professional-skill">Office Word、Excel、PPt等<span class="ver-line">|</span>熟练<span class="ver-line">|</span>24个月</div>
+					<div class="professional-skill">Photoshop ,Flash<span class="ver-line">|</span>良好<span class="ver-line">|</span>6个月</div>
+					<div class="professional-skill">CAD<span class="ver-line">|</span>精通<span class="ver-line">|</span>12个月</div>
+					<div class="professional-skill">VS Load Testing<span class="ver-line">|</span>熟练<span class="ver-line">|</span>15个月</div>
+					<div class="professional-skill">SharePoint、Office 365<span class="ver-line">|</span>熟练<span class="ver-line">|</span>35个月</div>
+				
 				</dd>
-					<dt><h5>Professional Skills</h5></dt>
-				<dd>
-					<div class="professional-skill">OC Language<span class="ver-line">|</span>proficient<span class="ver-line">|</span>12 months</div>
-					<div class="professional-skill">Office WOrd、Excel、PPT<span class="ver-line">|</span>proficient<span class="ver-line">|</span>24 months</div>
-					<div class="professional-skill">PhotoShop、Flash<span class="ver-line">|</span>average<span class="ver-line">|</span>6 months</div>
-					<div class="professional-skill">CAD<span class="ver-line">|</span>expert<span class="ver-line">|</span>12 months</div>
-					<div class="professional-skill">Studio VS Load Testing<span class="ver-line">|</span>proficient<span class="ver-line">|</span>15 months</div>
-					<div class="professional-skill">Sharepoint、Office 365<span class="ver-line">|</span>proficient<span class="ver-line">|</span>35 months</div>
-				</dd>
-				<dt><h5>Interests &amp; Hobbies</h5></dt>
+				<dt><h5>兴趣爱好</h5></dt>
 				<dd>
 					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-						Swimming、Jogging、Exercise、Game
+						游泳、跑步、健身、游戏
 					</p>
 				</dd>
 			</dl>
-			<input id="neturlparam" type="hidden" value="AppId=1&amp;Id=140742770&amp;Timestamp=1477363836&amp;Callback=&amp;signature=26422ED12C97BB8A03D888BD8F3C8256">
+			<input id="neturlparam" type="hidden" value="AppId=1&amp;Id=140742770&amp;Timestamp=1477363338&amp;Callback=&amp;signature=9ED499E27DE638E74E84B99931D6E610">
 		</div>
 	</body>
 </html>
