--- a/Easer's Resume_CE.html
+++ b/Easer's Resume_CE.html
@@ -13,7 +13,7 @@
 			<div class="summary">
 			<img width="100" height="130" align="right" class="headerImg" alt="刘玉泽" src="./htmlSource/EaserIcon01.jpg">
 				<h1>
-				<select id="select" onchange="window.location=this.value;">  
+				<select id="select" onchange="window.location=this.value;" style="font-size:32px;">  
 				<option value="./Easer's Resume_CE.html" selected="selected">Liu.Easer </option>  
 				<option value="./Easer's Resume_CC.html">刘玉泽</option>  
 				</select>
