--- a/Easer's Resume_CC.html
+++ b/Easer's Resume_CC.html
@@ -21,8 +21,8 @@
 			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<span class="ver-line">|</span>户口：吉林-四平，中国
 			<br>现居住于：
 				<select id="select01">
-					<option selected="selected">中国，长春</option>
-					<option>中国，北京</option>
+					<option selected="selected">中国，北京</option>
+					<option>中国，长春</option>
 				</select>
 			<br>5年工作经验
 			<p>手机：
@@ -48,7 +48,12 @@
 								<option>开发技术岗位</option>  
 							</select>
 						</li>
-						<li><strong>目前状况：</strong> 目前处于离职状态，可于12月份上岗</li>
+						<li><strong>期望地点：</strong>
+							<select id="select01">  
+								<option selected="selected">中国，北京</option> 
+								<option>中国，长春</option>  
+							</select>
+						</li>
 					</ul>
 				</dd>
 				<dt><h5>自我评价</h5></dt>
