--- a/Easer's Resume_CE.html
+++ b/Easer's Resume_CE.html
@@ -30,12 +30,8 @@
 				<dt><h5>Career Objective</h5></dt>
 				<dd>
 					<ul>
-					<li><strong>Desired Type of Employment:</strong><br>Full-time</li>
-					<li><strong>Desired Position:</strong><br>IOS Development Engineer、Game Developer</li>
-					<li><strong>Desired Industry:</strong><br>Computer Software、Online Game、Internet/E-Commerce</li>
+					<li><strong>Desired Position:</strong><br>IOS Development Engineer</li>
 					<li><strong>Desired Location:</strong><br>BeiJing. China</li>
-					<li><strong>Expected Salary(before tax):</strong><br>8000-10000 CNY/Month</li>
-					<li><strong>Current Situation:</strong><br>Now looking for a IOS Developer Position, can work since December</li>
 					</ul>
 				</dd>
 				<dt><h5>Self-assessment</h5></dt>
