--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</select>
 				</h1>
 			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<br>
-			吉林大学（08届）<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>5+年工作经验
+			吉林大学<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>5+年工作经验
 			<br>现居住于：
 				<select id="select01">
 					<option selected="selected">中国，北京</option>
@@ -79,18 +79,10 @@
 					</div> 
 					<div class="work-experience">
 						<p>2016/10 -- 2017/10</p>
-						<h6>Telltie Technology Sdn Bhd  <span class="ver-line">|</span> IOS开发</h6>
+						<h6>Telltie Technology Sdn Bhd  <span class="ver-line">|</span> IOS开发（学业期间兼职）</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
 							1.Maybank、Hong Leong项目的开发工作。<br>
 							2.账户管理中余额显示、转账、活动等各模块的实现及优化<br>
-						</p>
-					</div> 
-					<div class="work-experience">
-						<p>2016/10 -- 2017/10</p>
-						<h6>Pusat Bahasa Titian Jaya(Kuala Lumpur) Sdn Bhd <span class="ver-line">|</span> International Foundation English</h6>
-						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.于吉隆坡 Pusat Bahasa Titian Jaya(Kuala Lumpur) Sdn Bhd 完成 International Foundation English (Elementary & Intermediate & Advanced Level) 课程。<br>
-							2.获取 CES International English Examination Board (CESIEEB)。<br>
 						</p>
 					</div> 
 					<div class="work-experience">
@@ -172,6 +164,17 @@
 								3.依据优先级繁简度修复BUG，以保证功能正常实现。<br>
 							</p>
 						</div>
+					</div>
+				</dd>
+				<dt><h5>教育经历</h5></dt>
+				<dd>
+					<div class="education-background">
+						<p>2016/10 -- 2017/10</p>
+						<h6>Pusat Bahasa Titian Jaya(Kuala Lumpur) Sdn Bhd<span class="ver-line">|</span>International Foundation English</h6>
+					</div>
+					<div class="education-background">
+						<p>2008/08 -- 2012/07</p>
+						<h6>吉林大学<span class="ver-line">|</span>通信工程<span class="ver-line">|</span>统招本科</h6>
 					</div>
 				</dd>
 				<dt><h5>证书</h5></dt>
