--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 				</select>
 				</h1>
 			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<br>
-			吉林大学<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>5+年工作经验
-			<br>现居住于：
+			吉林大学<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>5+年工作经验<span class="ver-line">|</span>海外1年经验<br>
+			现居住于：
 				<select id="select01">
 					<option selected="selected">中国，北京</option>
 					<option>中国，长春</option>
