--- a/Easer's Resume_CE.html
+++ b/Easer's Resume_CE.html
@@ -20,10 +20,24 @@
 				</h1>
 				Male<span class="ver-line">|</span>Single<span class="ver-line">|</span>
 				Born in 1989/12<span class="ver-line">|</span>HUKOU：JILIN-SIPING, CHINA
-				<br>Location：BeiJing, China
-				<br>5 Years' Experience
-				<p>Mobile: +8615044158006</p>
-				<p>E-mail：<a href="mailto:liu.easer@qq.com">liu.easer@qq.com</a></p>
+				<br>Location：
+					<select id="select01">
+						<option selected="selected">BeiJing, China</option>
+						<option>ChangChun, China</option>
+					</select>
+				<br>7 Years' Experience
+				<p>Mobile: 
+					<select id="select01">  
+						<option selected="selected">+8617549611230</option>
+						<option>+8615044158006</option>  
+					</select>
+				</p>
+				<p>E-mail：
+					<select id="select01">  
+						<option selected="selected">liu.easer@qq.com</option> 
+						<option>liu.easer@gmail.com</option>  
+					</select>
+				</p>
 				<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
 			</div>
 			<dl class="details">
@@ -44,6 +58,22 @@
 				</dd>
 				<dt><h5>Work Experience</h5></dt>
 				<dd>
+					<div class="work-experience">
+						<p>2017/12 -- Present</p>
+						<h6>Beijing Juyi Hudong TechnologyCo.,Ltd<span class="ver-line">|</span>IOS Developer</h6>
+						<p>
+							<span>Computer Software</span>
+							<span><span class="ver-line">|</span>Private</span>
+							<span><span class="ver-line">|</span> Company Size：100-499</span>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							<strong>Job Description:</strong>
+							<br>1.Develop the official APPs for some football clubs, display news about football, provide BBS function.
+							<br>2.Develop a recruitment APP named XiCheng(personal version), includes IM and news functions.
+							<br>3.Develop IOS APP and Mini Program for WeChat named multi-purpose calculator.
+							<br>4.Develop IOS APP and Mini Game for WeChat named Eliminate Hexagon.
+						</p>
+					</div>
 					<div class="work-experience">
 						<p>2016/10 -- 2017/10</p>
 						<h6>Study English in Kuala Lumpur, and finish in Octorber</h6>
@@ -80,8 +110,75 @@
 				<dt><h5>Project Experience</h5></dt>
 				<dd>
 					<div class="project-experience">
-						<p>2013/11 -- 2016/10</p>
-						<h6>Develop the multiple versions of Apps</h6>
+						<p>2018/9-2019/2</p>
+						<h6>Multi-purpose Calculator</h6>
+						<div>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>Responsibilities：</strong>
+								<br>1. Scientific calculation, after-tax salary, clothing size, unit conversion and other functions.
+								<br>2. All kinds of calculation logic and ERROR logic of scientific calculation.
+								<br>3. The calculation logic of after-tax salary.
+							</p>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>Project Description：</strong>
+								<br>Build a lightweight, versatile calculator.
+							</p>
+						</div>
+					</div>
+					<div class="project-experience">
+						<p>2018/4-2018/9</p>
+						<h6>XiCheng Recruitment (personal version)</h6>
+						<div>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>Responsibilities：</strong>
+								<br>1. Edit resumes.
+								<br>2. Display enterprise information and news.
+								<br>3. Investment process.
+								<br>4. Instant communication with the person in charge of the enterprise side.
+							</p>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>Project Description：</strong>
+								<br>In conjunction with the enterprise version, the whole process of recruitment and application between enterprises and individuals can be realized.
+							</p>
+						</div>
+					</div>
+					<div class="project-experience">
+						<p>2017/12-2018/4</p>
+						<h6>Shanghai Shenhua & Tianjin Taida Official APP</h6>
+						<div>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>Responsibilities：</strong>
+								<br>1. Realization of mall module.
+								<br>2. IPhone X fit.
+								<br>3. Performance optimization.
+								<br>4. Fix bugs found during testing.
+							</p>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>Project Description：</strong>
+								<br>It provides a place for football club members and fans to communicate with each other, share the life details of members and fans, release team news as well as match schedule and match moments in the first time.
+							</p>
+						</div>
+					</div>
+					<div class="project-experience">
+						<p>2017/6-2017/9</p>
+						<h6>LOL Helper</h6>
+						<div>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>Responsibilities：</strong>
+								<br>1.Get game data with API and save into SQLite file.
+								<br>2.Draw line charts with CoreGraphics.
+								<br>3.Transitioning animation.
+								<br>4.Fix BUGs.
+							</p>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>Project Description：</strong>
+								<br>Players can search detail game data about LOL(South America server), or use players' name as keyword to search their recent summary and detail game information, then realize different players' strengths and weaknesses, improve players' abilities of LOL.
+							</p>
+						</div>
+					</div>
+					<div class="project-experience">
+						<p>2015/9-2016/10</p>
+						<h6>CG</h6>
 						<div>
 							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
 								<strong>Responsibilities：</strong>
@@ -89,8 +186,7 @@
 							</p>
 							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
 								<strong>Project Description：</strong>
-								<br>It is a add-ons for PC client of CG, mainly use for displaying and operating the data scaned by CG, 
-								make customs feel more convenient to check or operate the report.
+								<br>It is a add-ons for PC client of CG, mainly use for displaying and operating the data scaned by CG, make customs feel more convenient to check or operate the report.
 							</p>
 						</div>
 					</div>
