--- a/index.html
+++ b/index.html
@@ -1,191 +1,8 @@
-
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Easer's Resume_CC</title>
-		<meta name="robots" content="nofollow">
-		<link rel="stylesheet" type="text/css" href="./htmlSource/reset.min.css" media="all">
-		<link rel="stylesheet" type="text/css" href="./htmlSource/resume_preview.css" media="all">
+		<meta http-equiv="Content-Language" content="zh-CN">
+		<meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
+		<meta http-equiv="refresh" content="0.2;url=./Easer's Resume_CC.html">
 	</head>
-	<body>
-		
-		<div class="resumeBody">
-			<!-- <div style="height:32px;padding-left:20px;color:#fd7222;font-size:14px;"></div> -->
-			<div class="summary">
-			<img width="100" height="130" align="right" class="headerImg" alt="刘玉泽" src="./htmlSource/EaserIcon01.jpg">
-			<h1>
-				<select id="select" onchange="window.location=this.value;" style="font-size:32px;">  
-				<option value="./index.html" selected="selected">刘玉泽</option>  
-				<option value="./Easer's Resume_CE.html">Liu.Easer </option>  
-				</select>
-				</h1>
-			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<br>
-			吉林大学<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>5+年工作经验<span class="ver-line">|</span>海外1年经验<br>
-			现居住于：
-				<select id="select01">
-					<option selected="selected">中国，北京</option>
-					<option>中国，长春</option>
-				</select>
-			<p>手机：
-				<select id="select01">  
-					<option selected="selected">+8617549611230</option>
-					<option>+8615044158006</option>  
-				</select>
-			</p>
-			<p>E-mail：
-				<select id="select01">  
-					<option selected="selected">liu.easer@qq.com</option> 
-					<option>easer.liu01@gmail.com</option>  
-				</select>
-			</p>
-			<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
-			</div>
-			<dl class="details">
-				<dt><h5>求职意向</h5></dt>
-				<dd>
-					<ul>
-						<li><strong>期望职业：</strong>
-							<select id="select01">  
-								<option selected="selected">IOS开发工程师</option> 
-								<option>开发技术岗位</option>  
-							</select>
-						</li>
-						<li><strong>期望地点：</strong>
-							<select id="select01">  
-								<option selected="selected">中国，北京</option> 
-								<option>中国，长春</option>  
-							</select>
-						</li>
-					</ul>
-				</dd>
-				<dt><h5>职业技能</h5></dt>
-				<dd>
-					<div class="professional-skill">1.追求保证代码质量前提下提升工作效率，熟悉Git及GitFlow。</div>
-					<div class="professional-skill">2.熟悉Objective-C,基础知识扎实，了解多线程、内存、CoreData等，了解并正在深入学习Swift。</div>
-					<div class="professional-skill">3.熟悉iOS SDK（CoreFoundation, Core Graphics、Quartz 2D、Core Animation等）。</div>
-					<div class="professional-skill">4.善于并熟练使用Masonry、SDWebImage、MJExtension、ReactiveCocoa、FMDB等主流第三方库。</div>
-					<div class="professional-skill">5.熟悉HTTP协议，使用Charles进行网络模拟。</div>
-					<div class="professional-skill">6.熟悉JSON/XML的格式与解析。</div>
-					<div class="professional-skill">7.英语方面听说读写能力良好，曾于马来西亚进行为期一年的英语学习。</div>
-				</dd>
-				<dt><h5>工作经历</h5></dt>
-				<dd>
-					<div class="work-experience">
-						<p>2017/12 -- 至今</p>
-						<h6>九合体育<span class="ver-line">|</span> IOS开发</h6>
-						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.公司与众多足球俱乐部为合作关系，为其开发运营官方app，负责上海申花官方app和天津泰达官方app的开发工作。<br>
-							2.包括论坛性质的互交模块、新闻性质的图文视频展示模块，赛事信息的展示以及商城功能的开发等。<br>
-						</p>
-					</div> 
-					<div class="work-experience">
-						<p>2016/11 -- 2017/10</p>
-						<h6>Telltie Technology Sdn Bhd  <span class="ver-line">|</span> IOS开发（学业期间兼职）</h6>
-						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.Maybank、Hong Leong项目的开发工作。<br>
-							2.账户管理中余额显示、转账、活动等各模块的实现及优化<br>
-						</p>
-					</div> 
-					<div class="work-experience">
-						<p>2012/7 -- 2016/10</p>
-						<h6>长春径点科技有限公司<span class="ver-line">|</span>QA Leader、IOS开发</h6>
-						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.QA：组织QA团队分配任务，合理性确保公司自主产品CG的功能并发布，负责LoadTest等重要测试环节。<br>
-							2.IOS开发：公司自主产品CG附属APP的开发工作，主要实现对Report和数据的显示和操作。<br>
-						</p>
-					</div>
-				</dd>
-				<dt><h5>项目经验</h5></dt>
-				<dd>
-					<div class="project-experience">
-						<p>2017/12 -- 至今</p>
-						<h6>上海申花官方APP、天津泰达官方APP</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								为足球俱乐部成员及粉丝提供一个灵魂交流的场所，分享球员及球迷的生活点滴，第一时间发布球队新闻以及赛程安排和赛事瞬间。<br>
-								<strong>责任描述：</strong><br>
-								1.商城模块的实现。<br>
-								2.iPhone X的适配。<br>
-								3.性能上的优化。<br>
-								6.修复测试期间发现的BUG。<br>
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2016/11 -- 2017/10</p>
-						<h6>MayBank、Hong Leong</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								方便客户申请账户、查询余额、转账、购买商品、查看参与活动等关于账户的管理操作。<br>
-								<strong>责任描述：</strong><br>
-								1.余额显示界面的修正。<br>
-								2.信用卡申请模块实现。<br>
-								3.无卡取现功能。<br>
-								4.修复测试期间发现的BUG。<br>
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2017/06 -- 2017/09</p>
-						<h6>LOLHelper（独立兴趣研发）</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								方便玩家查询在英雄联盟南美服务器中的各种详细游戏数据，亦可依据用户名来查询特定玩家的近期游戏历史数据，比较同场游戏中不同玩家的详细数据，
-								以了解不同玩家的的擅长以及弱点，改善玩家的游戏能力。<br>
-								<strong>责任描述：</strong><br>
-								1.通过 Riot 的 API 来获取相应的游戏数据并储存到 SQLite 中。<br>
-								2.利用 CoreGraphics 实现折线图以及其他图标。<br>
-								3.实现各 View 之间的转场动画。<br>
-								4.修复测试期间发现的BUG。<br>
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2012/7 -- 2016/10</p>
-						<h6>CG（公司自主产品）</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								属于CG产品PC客户端的附属产品，主要用于显示CG产品PC客户端上记录的结果以及相关数据删、改、隔离等操作的基本功能，
-								使客户能够随时随地通过手机端进行查看和操作，免去原本必须在PC端进行操作的不便。<br>
-								<strong>责任描述：</strong><br>
-								1.依据客户需求以及PM提供的Desigen，实现App的Scan Report界面各控件的布局。<br>
-								2.配合API实现对相关数据删、改、隔离等操作。<br>
-								3.依据优先级繁简度修复BUG，以保证功能正常实现。<br>
-							</p>
-						</div>
-					</div>
-				</dd>
-				<dt><h5>教育经历</h5></dt>
-				<dd>
-					<div class="education-background">
-						<p>2016/10 -- 2017/10</p>
-						<h6>Pusat Bahasa Titian Jaya(Kuala Lumpur) Sdn Bhd<span class="ver-line">|</span>International Foundation English</h6>
-					</div>
-					<div class="education-background">
-						<p>2008/08 -- 2012/07</p>
-						<h6>吉林大学<span class="ver-line">|</span>通信工程<span class="ver-line">|</span>统招本科</h6>
-					</div>
-				</dd>
-				<dt><h5>证书</h5></dt>
-				<dd>
-					<h6>大学英语四级<span class="ver-line">|</span>2010/06</h6>
-					<h6>全国计算机等级二级<span class="ver-line">|</span>2011/03</h6>
-					<h6>CESIEEB<span class="ver-line">|</span>2017/07</h6>
-				</dd>
-				<dt><h5>自我评价</h5></dt>
-				<dd>
-					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-						1.能够实际地分析问题原因并进行处理，计划性的安排工作内容.
-						<br>2.善于独立思考，亦有良好的团队意识.
-						<br>3.有旺盛的求知欲和积极的进取心，积极了解新技术.
-					</p>
-				</dd>
-			</dl>
-			<input id="neturlparam" type="hidden" value="AppId=1&amp;Id=140742770&amp;Timestamp=1477363338&amp;Callback=&amp;signature=9ED499E27DE638E74E84B99931D6E610">
-		</div>
-	</body>
 </html>
