--- a/Easer's Resume_CC.html
+++ b/Easer's Resume_CC.html
@@ -8,32 +8,34 @@
 		<link rel="stylesheet" type="text/css" href="./htmlSource/resume_preview.css" media="all">
 	</head>
 	<body>
+		
 		<div class="resumeBody">
 			<!-- <div style="height:32px;padding-left:20px;color:#fd7222;font-size:14px;"></div> -->
 			<div class="summary">
 			<img width="100" height="130" align="right" class="headerImg" alt="刘玉泽" src="./htmlSource/EaserIcon01.jpg">
 			<h1>
 				<select id="select" onchange="window.location=this.value;" style="font-size:32px;">  
+				<option value="./index.html" selected="selected">刘玉泽</option>  
 				<option value="./Easer's Resume_CE.html">Liu.Easer </option>  
-				<option value="./Easer's Resume_CC.html" selected="selected">刘玉泽</option>  
 				</select>
 				</h1>
-			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<span class="ver-line">|</span>户口：吉林-四平，中国
-			<br>现居住于：
+			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<br>
+			吉林大学<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>7+年工作经验<span class="ver-line">|</span>海外1年经验<br>
+			现居住于：
 				<select id="select01">
 					<option selected="selected">中国，北京</option>
 					<option>中国，长春</option>
 				</select>
-			<br>5年工作经验
 			<p>手机：
 				<select id="select01">  
-					<option selected="selected">+8615044158006</option>  
+					<option selected="selected">+8617549611230</option>
+					<option>+8615044158006</option>  
 				</select>
 			</p>
 			<p>E-mail：
 				<select id="select01">  
 					<option selected="selected">liu.easer@qq.com</option> 
-					<option>easer.liu01@gmail.com</option>  
+					<option>liu.easer@gmail.com</option>  
 				</select>
 			</p>
 			<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
@@ -44,7 +46,7 @@
 					<ul>
 						<li><strong>期望职业：</strong>
 							<select id="select01">  
-								<option selected="selected">开发工程师</option> 
+								<option selected="selected">IOS开发工程师</option> 
 								<option>开发技术岗位</option>  
 							</select>
 						</li>
@@ -56,94 +58,151 @@
 						</li>
 					</ul>
 				</dd>
-				<dt><h5>自我评价</h5></dt>
+				<dt><h5>职业技能</h5></dt>
 				<dd>
-					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-					能够实际地分析问题原因并进行处理，计划性的安排工作内容，善于独立思考，亦有良好的团队意识，
-					有旺盛的求知欲和积极的进取心，得益于此，之前工作中负责的团队所有任务和产品都超乎预期的完成，亦曾数次在较短期限内完成公司的紧急任务。
-					</p>
+					<div class="professional-skill">1.追求保证代码质量前提下提升工作效率，熟悉Git及GitFlow。</div>
+					<div class="professional-skill">2.熟悉Objective-C,基础知识扎实，了解多线程、内存、CoreData等，了解并正在深入学习Swift。</div>
+					<div class="professional-skill">3.熟悉iOS SDK（CoreFoundation, Core Graphics、Quartz 2D、Core Animation等）。</div>
+					<div class="professional-skill">4.善于并熟练使用Masonry、SDWebImage、MJExtension、ReactiveCocoa、FMDB等主流第三方库。</div>
+					<div class="professional-skill">5.熟悉HTTP协议，使用Charles进行网络模拟。</div>
+					<div class="professional-skill">6.熟悉JSON/XML的格式与解析。</div>
+					<div class="professional-skill">7.英语方面听说读写能力良好，曾于马来西亚进行为期一年的英语学习。</div>
 				</dd>
 				<dt><h5>工作经历</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2016/10 -- 2017/10</p>
-						<h6>Pusat Bahasa Titian Jaya(Kuala Lumpur) Sdn Bhd <span class="ver-line">|</span> International Foundation English</h6>
+						<p>2018/04 -- 至今</p>
+						<h6>北京聚易互动科技有限公司<span class="ver-line">|</span> IOS开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							于吉隆坡 Pusat Bahasa Titian Jaya(Kuala Lumpur) Sdn Bhd 完成 International Foundation English (Elementary & Intermediate & Advanced Level) 课程。
-							获取 CES International English Examination Board (CESIEEB)。学业期间以业余时间编写用以查询游戏数据的 LOLHelper app。
+							1.编写习成个人端APP（招聘社区类型），含有投职逻辑、IM、新闻展示等模块。<br>
+							2.编写万能计算器APP。<br>
+							3.编写万能计算器以及六角消除的微信小程序版本。<br>
 						</p>
 					</div> 
 					<div class="work-experience">
-						<p>2015/09 -- 2016/10</p>
-						<h6>长春径点科技有限公司<span class="ver-line">|</span>IOS开发</h6>
-						<p>
-							<span>行业类别： 计算机软件</span>
-							<span><span class="ver-line">|</span>企业性质：外商独资</span>
-							<span><span class="ver-line">|</span>规模：100-499人</span>
-						</p>
+						<p>2017/12 -- 2018/04</p>
+						<h6>九合体育<span class="ver-line">|</span> IOS开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							<strong>工作描述：</strong>
-							<br>依据公司产品的Design和客户需求，用Object-C语言，以<strong>CoreGraphics</strong>、<strong>VFL</strong>等技术实现Scan Report界面绘制和布局，运用<strong>Core Data</strong>实现<strong>JSON</strong>数据操作功能，
-							通过<strong>自行查询资料</strong>解决了开发过程中多个问题，与同事协作成功完成了<strong>2个版本IOS App产品的Release</strong>，均得到客户的肯定。
+							1.公司与众多足球俱乐部为合作关系，为其开发运营官方app，负责上海申花官方app和天津泰达官方app的开发工作。<br>
+							2.包括论坛性质的互交模块、新闻性质的图文视频展示模块，赛事信息的展示以及商城功能的开发等。<br>
 						</p>
-					</div>
+					</div> 
 					<div class="work-experience">
-						<p>2013/11 -- 2015/09</p>
-						<h6>长春径点科技有限公司<span class="ver-line">|</span>QA</h6>
-						<p>
-							<span>行业类别： 计算机软件</span>
-							<span><span class="ver-line">|</span>企业性质：外商独资</span>
-							<span><span class="ver-line">|</span>规模：100-499人</span>
-						</p>
+						<p>2016/11 -- 2017/10</p>
+						<h6>Telltie Technology Sdn Bhd  <span class="ver-line">|</span> IOS开发（学业期间兼职）</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							<strong>工作描述：</strong>
-							<br>编写重要功能的测试用例，组织约<strong>5人Team</strong>进行各期间测试，提交JIRA BUG，期间保证<strong>4个版本的产品正常Release</strong>。
-							<br>使用VS Studio担负公司产品的<strong>压力测试</strong>和<strong>性能测试</strong>，提交Report以及合理性建议，使产品性能得到改善，研究新测试工具的用法及功能，如Loadrunner，VS Studio的Load balance测试等 。
+							1.Maybank、Hong Leong项目的开发工作。<br>
+							2.账户管理中余额显示、转账、活动等各模块的实现及优化<br>
+						</p>
+					</div> 
+					<div class="work-experience">
+						<p>2012/7 -- 2016/10</p>
+						<h6>长春径点科技有限公司<span class="ver-line">|</span>QA Leader、IOS开发</h6>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							1.QA：组织QA团队分配任务，合理性确保公司自主产品CG的功能并发布，负责LoadTest等重要测试环节。<br>
+							2.IOS开发：公司自主产品CG附属APP的开发工作，主要实现对Report和数据的显示和操作。<br>
 						</p>
 					</div>
 				</dd>
 				<dt><h5>项目经验</h5></dt>
 				<dd>
 					<div class="project-experience">
-						<p>2017/06 -- 2017/09</p>
-						<h6>LOLHelper（独立兴趣研发）</h6>
+						<p>2018/09 -- 2019/02</p>
+						<h6>万能计算器</h6>
 						<div>
 							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>责任描述：</strong>
-								<br>1.利用学习的业余时间，以 Objective-C 进行编写app。
-								<br>2.通过 Riot 的 API 来获取相应的游戏数据并储存到 SQLite 中。
-								<br>3.在合理的时机在 app 的各个 View 上显示游戏数据。
-								<br>4.利用 CoreGraphics 实现折线图以及其他图标。
-								<br>5.实现各 View 之间的转场动画。
-								<br>6.修复测试期间发现的BUG。
-							</p>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong>
-								<br>方便玩家查询在英雄联盟南美服务器中的各种详细游戏数据，亦可依据用户名来查询特定玩家的近期游戏历史数据，比较同场游戏中不同玩家的详细数据，
-								以了解不同玩家的的擅长以及弱点，改善玩家的游戏能力。
+								<strong>项目简介：</strong><br>
+								打造轻量级多功能计算器。<br>
+								<strong>责任描述：</strong><br>
+								1.科学计算、税后工资、服装尺码、单位转换等功能实现。<br>
+								2.科学计算的各种计算逻辑，以及ERROR逻辑。<br>
+								3.税后工资的计算逻辑。<br>
 							</p>
 						</div>
 					</div>
 					<div class="project-experience">
-						<p>2013/11 -- 2016/10</p>
+						<p>2018/04 -- 2018/09</p>
+						<h6>习成招聘个人版</h6>
+						<div>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>项目简介：</strong><br>
+								与企业版联用实现企业与个人之间招聘应聘的整个流程。<br>
+								<strong>责任描述：</strong><br>
+								1.编辑个人简历。<br>
+								2.企业信息以及新闻的展示。<br>
+								3.投职流程。<br>
+								4.与企业端负责人即时通信。<br>
+							</p>
+						</div>
+					</div>
+					<div class="project-experience">
+						<p>2017/12 -- 2018/04</p>
+						<h6>上海申花官方APP、天津泰达官方APP</h6>
+						<div>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>项目简介：</strong><br>
+								为足球俱乐部成员及粉丝提供一个灵魂交流的场所，分享球员及球迷的生活点滴，第一时间发布球队新闻以及赛程安排和赛事瞬间。<br>
+								<strong>责任描述：</strong><br>
+								1.商城模块的实现。<br>
+								2.iPhone X的适配。<br>
+								3.性能上的优化。<br>
+								4.修复测试期间发现的BUG。<br>
+							</p>
+						</div>
+					</div>
+					<div class="project-experience">
+						<p>2016/11 -- 2017/10</p>
+						<h6>MayBank、Hong Leong</h6>
+						<div>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>项目简介：</strong><br>
+								方便客户申请账户、查询余额、转账、购买商品、查看参与活动等关于账户的管理操作。<br>
+								<strong>责任描述：</strong><br>
+								1.余额显示界面的修正。<br>
+								2.信用卡申请模块实现。<br>
+								3.无卡取现功能。<br>
+								4.修复测试期间发现的BUG。<br>
+							</p>
+						</div>
+					</div>
+					<div class="project-experience">
+						<p>2017/06 -- 2017/09</p>
+						<h6>LOLHelper（独立兴趣研发）</h6>
+						<div>
+							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+								<strong>项目简介：</strong><br>
+								方便玩家查询在英雄联盟南美服务器中的各种详细游戏数据，亦可依据用户名来查询特定玩家的近期游戏历史数据，比较同场游戏中不同玩家的详细数据，
+								以了解不同玩家的的擅长以及弱点，改善玩家的游戏能力。<br>
+								<strong>责任描述：</strong><br>
+								1.通过 Riot 的 API 来获取相应的游戏数据并储存到 SQLite 中。<br>
+								2.利用 CoreGraphics 实现折线图以及其他图标。<br>
+								3.实现各 View 之间的转场动画。<br>
+								4.修复测试期间发现的BUG。<br>
+							</p>
+						</div>
+					</div>
+					<div class="project-experience">
+						<p>2012/7 -- 2016/10</p>
 						<h6>CG（公司自主产品）</h6>
 						<div>
 							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>责任描述：</strong>
-								<br>1.依据客户需求以及PM提供的Desigen，实现App的Scan Report界面各控件的布局。
-								<br>2.实现对相关数据删、改、隔离等操作。
-								<br>3.依据优先级繁简度修复BUG，以保证功能正常实现。
-							</p>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong>
-								<br>属于CG产品PC客户端的附属产品，主要用于显示CG产品PC客户端上记录的结果以及相关数据删、改、隔离等操作的基本功能，
-								使客户能够随时随地通过手机端进行查看和操作，免去原本必须在PC端进行操作的不便。
+								<strong>项目简介：</strong><br>
+								属于CG产品PC客户端的附属产品，主要用于显示CG产品PC客户端上记录的结果以及相关数据删、改、隔离等操作的基本功能，
+								使客户能够随时随地通过手机端进行查看和操作，免去原本必须在PC端进行操作的不便。<br>
+								<strong>责任描述：</strong><br>
+								1.依据客户需求以及PM提供的Desigen，实现App的Scan Report界面各控件的布局。<br>
+								2.配合API实现对相关数据删、改、隔离等操作。<br>
+								3.依据优先级繁简度修复BUG，以保证功能正常实现。<br>
 							</p>
 						</div>
 					</div>
 				</dd>
 				<dt><h5>教育经历</h5></dt>
 				<dd>
+					<div class="education-background">
+						<p>2016/10 -- 2017/10</p>
+						<h6>Pusat Bahasa Titian Jaya(Kuala Lumpur) Sdn Bhd<span class="ver-line">|</span>International Foundation English</h6>
+					</div>
 					<div class="education-background">
 						<p>2008/08 -- 2012/07</p>
 						<h6>吉林大学<span class="ver-line">|</span>通信工程<span class="ver-line">|</span>统招本科</h6>
@@ -155,22 +214,12 @@
 					<h6>全国计算机等级二级<span class="ver-line">|</span>2011/03</h6>
 					<h6>CESIEEB<span class="ver-line">|</span>2017/07</h6>
 				</dd>
-				<dt><h5>语言能力</h5></dt>
-				<dd><div class="language-skill">英语<span>：读写能力良好<span class="ver-line">|</span> 听说能力良好</span></div></dd>
-				<dt><h5>专业技能</h5></dt>
-				<dd>
-					<div class="professional-skill">OC<span class="ver-line">|</span>熟练<span class="ver-line">|</span>12个月</div>
-					<div class="professional-skill">Office Word、Excel、PPt等<span class="ver-line">|</span>熟练<span class="ver-line">|</span>24个月</div>
-					<div class="professional-skill">Photoshop ,Flash<span class="ver-line">|</span>良好<span class="ver-line">|</span>6个月</div>
-					<div class="professional-skill">CAD<span class="ver-line">|</span>精通<span class="ver-line">|</span>12个月</div>
-					<div class="professional-skill">VS Load Testing<span class="ver-line">|</span>熟练<span class="ver-line">|</span>15个月</div>
-					<div class="professional-skill">SharePoint、Office 365<span class="ver-line">|</span>熟练<span class="ver-line">|</span>35个月</div>
-				
-				</dd>
-				<dt><h5>兴趣爱好</h5></dt>
+				<dt><h5>自我评价</h5></dt>
 				<dd>
 					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-						游泳、跑步、健身、游戏
+						1.能够实际地分析问题原因并进行处理，计划性的安排工作内容.
+						<br>2.善于独立思考，亦有良好的团队意识.
+						<br>3.有旺盛的求知欲和积极的进取心，积极了解新技术.
 					</p>
 				</dd>
 			</dl>
