--- a/Easer's Resume_CC.html
+++ b/Easer's Resume_CC.html
@@ -71,20 +71,14 @@
 				<dt><h5>工作经历</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2018/04 -- 至今</p>
+						<p>2017/12 -- 2019/05</p>
 						<h6>北京聚易互动科技有限公司<span class="ver-line">|</span> IOS开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.编写习成个人端APP（招聘社区类型），含有投职逻辑、IM、新闻展示等模块。<br>
-							2.编写万能计算器APP。<br>
-							3.编写万能计算器以及六角消除的微信小程序版本。<br>
-						</p>
-					</div> 
-					<div class="work-experience">
-						<p>2017/12 -- 2018/04</p>
-						<h6>九合体育<span class="ver-line">|</span> IOS开发</h6>
-						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.公司与众多足球俱乐部为合作关系，为其开发运营官方app，负责上海申花官方app和天津泰达官方app的开发工作。<br>
-							2.包括论坛性质的互交模块、新闻性质的图文视频展示模块，赛事信息的展示以及商城功能的开发等。<br>
+							1.为众多足球俱乐部开发运营官方app，负责上海申花官方app和天津泰达官方app的开发工作。 <br>
+							2.包括论坛性质的互交模块、新闻性质的图文视频展示模块，赛事信息的展示以及商城功能的开发等。 <br>
+							3.编写习成个人端APP(招聘社区类型)，含有投职逻辑、IM、新闻展示等模块。 <br>
+							4.编写万能计算器APP。<br>
+							5.编写万能计算器以及六角消除的微信小程序版本。<br>
 						</p>
 					</div> 
 					<div class="work-experience">
