modify CC resume
modify CC resume

--- a/Easer's Resume_CC.html
+++ b/Easer's Resume_CC.html
@@ -21,11 +21,17 @@
 				</h1>
 			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<br>
 			吉林大学<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>7+年工作经验<span class="ver-line">|</span>海外1年经验<br>
-			现居住于：
-				<select id="select01">
-					<option selected="selected">中国，北京</option>
-					<option>中国，长春</option>
+			<p>职业期望：
+				<select id="select01">  
+					<option selected="selected">IOS开发工程师</option> 
+					<option>开发技术岗位</option>  
 				</select>
+				<span class="ver-line">|</span>
+				<select id="select01">  
+					<option selected="selected">中国，北京</option> 
+					<option>中国，长春</option>  
+				</select>
+			</p>
 			<p>手机：
 				<select id="select01">  
 					<option selected="selected">+8617549611230</option>
@@ -39,158 +45,109 @@
 				</select>
 			</p>
 			<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
+			<p>CSDN：<a href="https://blog.csdn.net/github_33393668">https://blog.csdn.net/github_33393668</a></p>
 			</div>
 			<dl class="details">
-				<dt><h5>求职意向</h5></dt>
-				<dd>
-					<ul>
-						<li><strong>期望职业：</strong>
-							<select id="select01">  
-								<option selected="selected">IOS开发工程师</option> 
-								<option>开发技术岗位</option>  
-							</select>
-						</li>
-						<li><strong>期望地点：</strong>
-							<select id="select01">  
-								<option selected="selected">中国，北京</option> 
-								<option>中国，长春</option>  
-							</select>
-						</li>
-					</ul>
-				</dd>
 				<dt><h5>职业技能</h5></dt>
 				<dd>
 					<div class="professional-skill">1.追求保证代码质量前提下提升工作效率，熟悉Git及GitFlow。</div>
 					<div class="professional-skill">2.熟悉Objective-C,基础知识扎实，了解多线程、内存、CoreData等，了解并正在深入学习Swift。</div>
 					<div class="professional-skill">3.熟悉iOS SDK（CoreFoundation, Core Graphics、Quartz 2D、Core Animation等）。</div>
-					<div class="professional-skill">4.善于并熟练使用Masonry、SDWebImage、MJExtension、ReactiveCocoa、FMDB等主流第三方库。</div>
+					<div class="professional-skill">4.善于并熟练使用Masonry、SDWebImage、MJExtension等主流第三方库。</div>
 					<div class="professional-skill">5.熟悉HTTP协议，使用Charles进行网络模拟。</div>
 					<div class="professional-skill">6.熟悉JSON/XML的格式与解析。</div>
-					<div class="professional-skill">7.英语方面听说读写能力良好，曾于马来西亚进行为期一年的英语学习。</div>
+					<div class="professional-skill">7.了解 ReactNative。</div>
+					<div class="professional-skill">8.英语方面听说读写能力良好，曾于马来西亚进行为期一年的英语学习。</div>
 				</dd>
 				<dt><h5>工作经历</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2017/12 -- 2019/05</p>
-						<h6>北京聚易互动科技有限公司<span class="ver-line">|</span> IOS开发</h6>
+						<p>2019/09 -- 至今</p>
+						<h6>清流鼎点科技有限公司<span class="ver-line">|</span> APP开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.为众多足球俱乐部开发运营官方app，负责上海申花官方app和天津泰达官方app的开发工作。 <br>
-							2.包括论坛性质的互交模块、新闻性质的图文视频展示模块，赛事信息的展示以及商城功能的开发等。 <br>
-							3.编写习成个人端APP(招聘社区类型)，含有投职逻辑、IM、新闻展示等模块。 <br>
-							4.编写万能计算器APP。<br>
-							5.编写万能计算器以及六角消除的微信小程序版本。<br>
+							1.开发足球印记 web app （基于 React Native 和 React web）。
+						</p>
+						<p style="margin-left: 20pt;">
+							- 足球印记是一款记录播放用户自摄球场比赛的 APP。<br>
+							- 出于引流目的开发 web app 版，包括界面和视频播放<br>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							2.直面应用 PC 版（运用 Electron 开发）。 <br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- 直面是一款视频会议类应用。<br>
+							- 拆分 Mobile 端 RN 代码进行复用，完成 PC 端应用界面。<br>
 						</p>
 					</div> 
 					<div class="work-experience">
-						<p>2016/11 -- 2017/10</p>
-						<h6>Telltie Technology Sdn Bhd  <span class="ver-line">|</span> IOS开发（学业期间兼职）</h6>
+						<p>2017/12 -- 2019/05</p>
+						<h6>北京聚易互动科技有限公司<span class="ver-line">|</span> IOS开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.Maybank、Hong Leong项目的开发工作。<br>
-							2.账户管理中余额显示、转账、活动等各模块的实现及优化<br>
+							1.上海申花官方APP、天津泰达官方APP。 <br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- 俱乐部官方 APP 旨在为球迷及时提供相关俱乐部的比赛新闻和赛程安排，为球迷提供交流场所。<br>
+							- 负责商城模块的开发，为新老机型进行适配，并进行一定的优化。<br>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							2.习成招聘（个人版）。 <br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- 习成招聘（个人版）与企业版联用，实现企业与个人之间招聘应聘的整个流程。<br>
+							- 负责个人简历、企业信息和新闻展示以及投职流程的开发。<br>
+							- 运用网易IM实现即时通信。<br>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							3.万能计算器（IOS、小程序）。 <br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- 万能计算器是一款为用户提供科学计算、税后工资、服装尺码等计算功能的计算器应用。<br>
+							- 负责科学计算、税后工资、服装尺码等各计算功能的实现。<br>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							4.六角消除（小游戏）。<br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- 六角消除是一款六边形消除类休闲小游戏。<br>
+							- 使用Cocos Creator实现游戏逻辑<br>
+							- 实现微信排行榜功能<br>
+						</p>
+					</div> 
+					<div STYLE="page-break-after: always;" ></div>
+					<div class="work-experience">
+						<p>2016/11 -- 2017/10</p>
+						<h6>进行英语学习课程</h6>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							1.LOLHelper（独立兴趣研发）。<br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- LOLHelper 用于方便玩家查询在英雄联盟南美服务器中的各种游戏数据，模拟游戏配置，以改善游戏能力。<br>
+							- 通过 Riot 的 API 来获取相应的游戏数据并储存到 SQLite 中。<br>
+							- 利用 CoreGraphics 实现折线图以及其他图标。<br>
+							- 实现各 View 之间的转场动画。<br>
 						</p>
 					</div> 
 					<div class="work-experience">
 						<p>2012/7 -- 2016/10</p>
 						<h6>长春径点科技有限公司<span class="ver-line">|</span>QA Leader、IOS开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.QA：组织QA团队分配任务，合理性确保公司自主产品CG的功能并发布，负责LoadTest等重要测试环节。<br>
-							2.IOS开发：公司自主产品CG附属APP的开发工作，主要实现对Report和数据的显示和操作。<br>
+							CG（公司自主产品，QA Leader）。<br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- CG PC客户端主要用于使客户公司方便管理其 SharePoint 平台上的文件系统，对文件有增、删、改、查、隔离等操作。<br>
+							- 组织QA团队分配任务，合理性确保公司自主产品CG的功能并发布，负责LoadTest等重要测试环节。<br>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							CG（公司自主产品，IOS开发）。<br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- 属于CG产品PC客户端的附属产品，主要用于使客户能够随时随地通过手机端进行查看和操作，免去原本必须在PC端进行操作的不便。。<br>
+							- 依据客户需求以及PM提供的Desigen，实现App的Scan Report界面各控件的布局。<br>
+							- 配合API实现对相关数据删、改、隔离等操作。<br>
 						</p>
 					</div>
 				</dd>
-				<dt><h5>项目经验</h5></dt>
-				<dd>
-					<div class="project-experience">
-						<p>2018/09 -- 2019/02</p>
-						<h6>万能计算器</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								打造轻量级多功能计算器。<br>
-								<strong>责任描述：</strong><br>
-								1.科学计算、税后工资、服装尺码、单位转换等功能实现。<br>
-								2.科学计算的各种计算逻辑，以及ERROR逻辑。<br>
-								3.税后工资的计算逻辑。<br>
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2018/04 -- 2018/09</p>
-						<h6>习成招聘个人版</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								与企业版联用实现企业与个人之间招聘应聘的整个流程。<br>
-								<strong>责任描述：</strong><br>
-								1.编辑个人简历。<br>
-								2.企业信息以及新闻的展示。<br>
-								3.投职流程。<br>
-								4.与企业端负责人即时通信。<br>
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2017/12 -- 2018/04</p>
-						<h6>上海申花官方APP、天津泰达官方APP</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								为足球俱乐部成员及粉丝提供一个灵魂交流的场所，分享球员及球迷的生活点滴，第一时间发布球队新闻以及赛程安排和赛事瞬间。<br>
-								<strong>责任描述：</strong><br>
-								1.商城模块的实现。<br>
-								2.iPhone X的适配。<br>
-								3.性能上的优化。<br>
-								4.修复测试期间发现的BUG。<br>
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2016/11 -- 2017/10</p>
-						<h6>MayBank、Hong Leong</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								方便客户申请账户、查询余额、转账、购买商品、查看参与活动等关于账户的管理操作。<br>
-								<strong>责任描述：</strong><br>
-								1.余额显示界面的修正。<br>
-								2.信用卡申请模块实现。<br>
-								3.无卡取现功能。<br>
-								4.修复测试期间发现的BUG。<br>
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2017/06 -- 2017/09</p>
-						<h6>LOLHelper（独立兴趣研发）</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								方便玩家查询在英雄联盟南美服务器中的各种详细游戏数据，亦可依据用户名来查询特定玩家的近期游戏历史数据，比较同场游戏中不同玩家的详细数据，
-								以了解不同玩家的的擅长以及弱点，改善玩家的游戏能力。<br>
-								<strong>责任描述：</strong><br>
-								1.通过 Riot 的 API 来获取相应的游戏数据并储存到 SQLite 中。<br>
-								2.利用 CoreGraphics 实现折线图以及其他图标。<br>
-								3.实现各 View 之间的转场动画。<br>
-								4.修复测试期间发现的BUG。<br>
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2012/7 -- 2016/10</p>
-						<h6>CG（公司自主产品）</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>项目简介：</strong><br>
-								属于CG产品PC客户端的附属产品，主要用于显示CG产品PC客户端上记录的结果以及相关数据删、改、隔离等操作的基本功能，
-								使客户能够随时随地通过手机端进行查看和操作，免去原本必须在PC端进行操作的不便。<br>
-								<strong>责任描述：</strong><br>
-								1.依据客户需求以及PM提供的Desigen，实现App的Scan Report界面各控件的布局。<br>
-								2.配合API实现对相关数据删、改、隔离等操作。<br>
-								3.依据优先级繁简度修复BUG，以保证功能正常实现。<br>
-							</p>
-						</div>
-					</div>
-				</dd>
+				<!-- <div STYLE="page-break-after: always;"></div> -->
 				<dt><h5>教育经历</h5></dt>
 				<dd>
 					<div class="education-background">
@@ -207,13 +164,14 @@
 					<h6>大学英语四级<span class="ver-line">|</span>2010/06</h6>
 					<h6>全国计算机等级二级<span class="ver-line">|</span>2011/03</h6>
 					<h6>CESIEEB<span class="ver-line">|</span>2017/07</h6>
+					<h6>PMP<span class="ver-line">|</span>2019/03</h6>
 				</dd>
 				<dt><h5>自我评价</h5></dt>
 				<dd>
 					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-						1.能够实际地分析问题原因并进行处理，计划性的安排工作内容.
-						<br>2.善于独立思考，亦有良好的团队意识.
-						<br>3.有旺盛的求知欲和积极的进取心，积极了解新技术.
+						1.主攻 IOS APP 开发，了解 React Native语言，正逐渐转向 Swift 语言。<br>
+						2.经常运用 Google 和 Stack overflow 查找开发过程中遇到问题的办法，或者查看官方文档经过实验解决。<br>
+						3.由于非科班出身，算法能力有所不足，所以会每周查看 Leetcode 上算法的原理，并实践。<br>
 					</p>
 				</dd>
 			</dl>
